# humpty

./: .gitignore  Cargo.toml  LICENSE  README.md  README.md.bak  last300  todo.md
data/: CPIUFDNS.csv  LAco.csv  Readme.txt  all-cves-count.csv  ca-cases.csv  california-cases-per-day.csv  climate.csv  la-cases-usafacts.csv  lake-mead.csv  las-vegas-gdelt.csv  trial.csv
doc/: README.md  X (Case Conflict).yml  abba.yml  covla.yml  cpi.yml  howto.md  x.yml  x200.yml  x2h_200l.yml  x2h_400l.yml
published_results/: #compare_humpty_delphi_others.ipynb#  00_build_humpty_baseline.sh  10_build_humpty_baseline.sh  10_build_humpty_baseline.sh.bak  Readme.md  california-cases-per-week.csv  compare_humpty_delphi_others.ipynb  compare_humpty_delphi_others.ipynb.bak  compare_humpty_delphi_others.ipynb.old  humpty_baseline_delta.py  humpty_baseline_delta.py.bak  pyvenv.cfg  reaggregate_by_week.py  requirements.txt
research/: param_stability.sh~
src/: lib.rs  main.rs  main_mod_dm_csv.rs  main_mod_dm_exp.rs  main_mod_dm_fit.rs  main_mod_dm_gen.rs  main_mod_dm_viz.rs  viz_lib.rs  viz_lib2.rs
src/models/: ModelAdditive.rs  ModelAffine.rs  ModelConstant.rs  ModelTanh.rs  mod.rs
src/tests/: kde.rs
